force/src/objects/Capability__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents as set ability, such as managing opportunities.</description>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Driver</label>
        <referenceTo>Business_Driver__c</referenceTo>
        <relationshipLabel>Capabilities</relationshipLabel>
        <relationshipName>Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capability_Detail__c</fullName>
        <label>Capability Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Capabilities</relationshipLabel>
        <relationshipName>Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Capability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Capability_Detail__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Capability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capabilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>